correction des marges et alignements

--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,15 @@ button:hover {
 
 figure {
   margin: 0%;
-  margin-bottom: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); text-align: center;
+  margin-bottom: 2rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+}
+
+figcaption {
+  margin: 0;
+  font-size: 12px;
+  color: #333;
+  padding: 5px 10px;
 }
 
 .bgWhite {
@@ -98,8 +105,8 @@ figure {
 }
 
 .container {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .item {
